--- a/src/layouts/TavoloRossoOccupato.fxml
+++ b/src/layouts/TavoloRossoOccupato.fxml
@@ -109,17 +109,17 @@
             <Insets />
          </VBox.margin>
          <children>
-            <Button layoutX="26.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="MODIFICA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="10.0">
+            <Button layoutX="26.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="MODIFICA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="10.0" onAction="#handlerModifica">
                <font>
                   <Font name="Segoe UI Historic" size="16.0" />
                </font>
             </Button>
-            <Button layoutX="238.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ELIMINA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <Button layoutX="238.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ELIMINA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0" onAction="#handlerElimina">
                <font>
                   <Font name="Segoe UI Historic" size="16.0" />
                </font>
             </Button>
-            <Button layoutX="461.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ANNULLA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="10.0">
+            <Button layoutX="461.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ANNULLA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="10.0" onAction="#handlerAnnulla">
                <font>
                   <Font name="Segoe UI Historic" size="16.0" />
                </font>
