--- a/src/layouts/ScenePrenotazione.fxml
+++ b/src/layouts/ScenePrenotazione.fxml
@@ -3,14 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.creaprenotazione.ControllerPrenotazione">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -91,27 +89,20 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Label fx:id="testoPosti" alignment="CENTER" contentDisplay="CENTER" layoutX="24.0" layoutY="238.0" prefHeight="24.0" prefWidth="23.0" text="0" textAlignment="CENTER" />
-            <Button fx:id="bottonePiuPosti" layoutX="82.0" layoutY="237.0" mnemonicParsing="false" onAction="#handlerPiuPosti" prefHeight="25.0" prefWidth="25.0" text="+" />
+            <Label fx:id="testoPosti" alignment="CENTER" contentDisplay="CENTER" layoutX="24.0" layoutY="238.0" prefHeight="24.0" prefWidth="26.0" text="0" textAlignment="CENTER" />
+            <Button fx:id="bottonePiuPosti" layoutX="53.0" layoutY="237.0" mnemonicParsing="false" onAction="#handlerPiuPosti" prefHeight="25.0" prefWidth="25.0" text="+" />
             <Button fx:id="bottoneMenoPosti" layoutX="1.0" layoutY="237.0" mnemonicParsing="false" onAction="#handlerMenoPosti" text="-" />
-            <RadioButton fx:id="bottonePranzo" layoutX="1.0" layoutY="205.0" mnemonicParsing="false" text="Pranzo">
-               <toggleGroup>
-                  <ToggleGroup fx:id="turno" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="bottoneCena" layoutX="81.0" layoutY="205.0" mnemonicParsing="false" text="Cena" toggleGroup="$turno" />
             <Label fx:id="etichettaAzione" layoutX="273.0" layoutY="10.0" prefHeight="27.0" prefWidth="117.0">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="238.0" prefHeight="24.0" prefWidth="12.0" text="/" textAlignment="CENTER" />
-            <Label fx:id="massimoPosti" alignment="CENTER" contentDisplay="CENTER" layoutX="58.0" layoutY="238.0" prefHeight="24.0" prefWidth="23.0" textAlignment="CENTER" />
             <Label fx:id="errore" layoutX="3.0" layoutY="279.0" prefHeight="21.0" prefWidth="252.0" text="Errore - dati inseriti non corretti" textFill="RED">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
+            <TextField fx:id="testoPeriodo" layoutX="1.0" layoutY="202.0" promptText="PRANZO/CENA" />
          </children>
       </AnchorPane>
    </center>
