--- a/src/layouts/AdminUserSelection.fxml
+++ b/src/layouts/AdminUserSelection.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
-xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.adminuser.AdminUserSelectionController">
+xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.adminuser.ControllerAdminUserSelection">
    <children>
-      <Button layoutX="116.0" layoutY="128.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="143.0" text="Prenota" onAction="#loadUserDecision"/>
-      <Button layoutX="371.0" layoutY="131.0" mnemonicParsing="false"  prefHeight="138.0" prefWidth="143.0" text="Login Amministratore" onAction="#loadAdminLogin" />
+      <Button id="User" layoutX="116.0" layoutY="128.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="143.0" text="Prenota" onAction="#loadUserDecision"/>
+      <Button fx:id="Admin" layoutX="371.0" layoutY="131.0" mnemonicParsing="false"  prefHeight="138.0" prefWidth="143.0" text="Login Amministratore" onAction="#loadAdminLogin" />
    </children>
 </AnchorPane>
