--- a/src/layouts/TavoloRossoOccupato.fxml
+++ b/src/layouts/TavoloRossoOccupato.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<VBox fx:id="vBoxPrincipale" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #F8EAEA; -fx-border-color: #FF0000;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.piantina.ControllerTavoloOccupato">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #F8EAEA; -fx-border-color: #FF0000;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <TextFlow prefHeight="56.0" prefWidth="600.0" style="-fx-border-color: #FF0000;" textAlignment="CENTER">
          <children>
@@ -109,17 +109,17 @@
             <Insets />
          </VBox.margin>
          <children>
-            <Button fx:id="buttonModifica" layoutX="26.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="MODIFICA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="10.0" onAction="#handlerModifica">
+            <Button fx:id="buttonModifica" layoutX="26.0" layoutY="9.0" mnemonicParsing="false" onAction="#handlerModifica" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="MODIFICA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="10.0" >
                <font>
                   <Font name="Segoe UI Historic" size="16.0" />
                </font>
             </Button>
-            <Button layoutX="238.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ELIMINA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0" onAction="#handlerElimina">
+            <Button fx:id="buttonElimina" layoutX="238.0" layoutY="9.0" mnemonicParsing="false" onAction="#handlerElimina" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ELIMINA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0" >
                <font>
                   <Font name="Segoe UI Historic" size="16.0" />
                </font>
             </Button>
-            <Button layoutX="461.0" layoutY="9.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ANNULLA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="10.0" onAction="#handlerAnnulla">
+            <Button fx:id="buttonAnnulla" layoutX="461.0" layoutY="9.0" mnemonicParsing="false" onAction="#handlerAnnulla" prefHeight="48.0" prefWidth="123.0" style="-fx-background-color: #FBDBDB; -fx-border-color: #FF0000;" text="ANNULLA" textFill="#c60000" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="10.0" >
                <font>
                   <Font name="Segoe UI Historic" size="16.0" />
                </font>
